--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@threlte/extras": "^8.10.0",
     "@types/three": "^0.162.0",
     "sass": "^1.71.1",
+    "svelte-portal": "^2.2.1",
     "three": "^0.162.0"
   }
 }
